@@ -17,5 +17,5 @@ prefix = '/opt/gtk2'
 # arguments to pass to autogen script
 autogenargs='--enable-maintainer-mode --disable-static --disable-gtk-doc'
 
-installprog = '/home/james/bin/install-check'
+installprog = os.path.join(os.environ['HOME'], 'bin', 'install-check')
 
