@@ -28,4 +28,4 @@ prefix = '/gnome/head/INSTALL'
 # a alternative install program to use.
 # The included install-check program won't update timestamps if the
 # header hasn't changed
-#   installprog = '/home/james/bin/install-check'
+installprog = os.path.join(os.environ['HOME'], 'bin', 'install-check')
